RESOLVED FIXED312988
ANGLE: Metal: TransformFeedbackTest.RenderOnceChangeXfbBufferRenderAgain fails validation
https://bugs.webkit.org/show_bug.cgi?id=312988
Summary ANGLE: Metal: TransformFeedbackTest.RenderOnceChangeXfbBufferRenderAgain fail...
Kimmo Kinnunen
Reported 2026-04-22 05:46:35 PDT
ANGLE: Metal: TransformFeedbackTest.RenderOnceChangeXfbBufferRenderAgain fails validation
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-22 05:46:42 PDT
Kimmo Kinnunen
Comment 2 2026-04-22 05:53:34 PDT
EWS
Comment 3 2026-04-23 02:59:40 PDT
Committed 311839@main (7e67d72fd8ad): <https://commits.webkit.org/311839@main> Reviewed commits have been landed. Closing PR #63322 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.